<resources>
    <string name="app_name">Lesson1</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="label_main_activity">Main Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="gallery_opened">Gallery opened</string>
    <string name="menu_group_communicate">Communicate</string>
    <string name="menu_group_extra">Extra</string>
    <string name="menu_about_developer">About developer</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about_app">About application</string>
    <string name="menu_help">Help</string>
</resources>
